src/compact-character-controls/main.scss
.bbb-compact-character-controls-btn {
  order: 99;
}

.bbb-compact-character-controls-menu-host {
  position: relative;
  align-self: flex-end;
  order: 100; // force to the last option
  z-index: 100; // deconflict with character list and other elements
}

.bbb-compact-character-controls-menu {
  position: absolute;
  right: 0;
  top: 100%;

  display: flex;
  flex-flow: column;
  gap: 4px;
  padding: 4px 0;

  background-color: color-mix(var(--color-surface), black 20%);
  border: 1px solid var(--color-border);
  border-radius: var(--radius-md);
  text-align: left;
  width: max-content;
  min-width: 120px;
  max-width: 300px;

  &:not(.open) {
    display: none;
  }

  > .btn {
    padding: 10px 20px;
    color: inherit;
    border-radius: unset;
    border: unset;
    background-color: transparent;
    text-align: left;

    &:hover {
      color: inherit;
      background-color: color-mix(currentColor, transparent 90%);
    }
  }
}

